<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ProductInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="Name"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Quantity : "
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="#FFD54F"
                android:gravity="center"
                android:padding="10dp"
                android:text="+"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/input_quantity"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number" />

            <Button
                android:id="@+id/sub"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="#FFD54F"
                android:gravity="center"
                android:padding="10dp"
                android:text="-"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Price : "
            android:textSize="16sp" />

        <EditText
            android:id="@+id/input_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/price"
            android:inputType="number" />

        <TextView
            android:id="@+id/supplier_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/supplier"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/input_supplier_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:digits="@string/ten_digit"
            android:hint="@string/phone"
            android:inputType="phone" />

        <TextView
            android:id="@+id/image_selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/yellow"
            android:padding="15dp"
            android:text="@string/select_image"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/order_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/yellow"
            android:padding="15dp"
            android:text="@string/order"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="5dp"
            android:gravity="center" />
    </LinearLayout>
</ScrollView>